plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openrewrite.rewrite' version '7.15.0'
    id 'com.github.ben-manes.versions' version '0.52.0'
}

group = 'bunny'
version = '0.0.1-SNAPSHOT'
description = 'board-hole'


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // -- Core Spring Boot Starters --
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    
    // -- Session Management (Redis) --
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'

    // -- API Documentation (SpringDoc) --
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.11"

    // -- Mapping (MapStruct) --
    implementation "org.mapstruct:mapstruct:1.6.3"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"

    // -- Lombok --
    compileOnly "org.projectlombok:lombok:1.18.38"
    annotationProcessor "org.projectlombok:lombok:1.18.38"

    // -- Database Drivers --
    runtimeOnly "com.mysql:mysql-connector-j:9.4.0"

    // -- Logging (JSON encoder, opt-in in prod) --
    implementation "net.logstash.logback:logstash-logback-encoder:8.1"

    // -- Dev only --
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // -- Testing --
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // -- OpenRewrite recipes (static analysis/refactoring) --
    rewrite 'org.openrewrite.recipe:rewrite-spring:6.13.0'
    rewrite 'org.openrewrite.recipe:rewrite-static-analysis:2.16.0'
}

tasks.named('test') {
    useJUnitPlatform()
    
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = "short"
    }
}

rewrite {
    activeRecipe('bunny.boardhole.refactor.main')
    exportDatatables = true
}
